--- a/index.html
+++ b/index.html
@@ -145,6 +145,8 @@
                 <li><span>120</span>Awards</li>
             </ul>
         </div>
+        <div class="circle-fun"></div>
+        <div class="rect-fun"></div>
     </div>
     <div class="page-video">
         <div class="wrap">
@@ -286,19 +288,37 @@
                     <img class="avatar" src="img/photo1.png" alt="">
                     <p class="position">founder</p>
                     <p class="name">Ricardo T. Obrien</p>
-                    <button type="button" class="btn-more"></button>
+                    <button type="button" class="btn-team btn-more btn-ric"><span></span></button>
+                    <ul class="social-team social-ric" style="display:none">
+                        <li><a href="" target="_blank" class="btn-team btn-fb"><span></span></a></li>
+                        <li><a href="" target="_blank" class="btn-team btn-tw"><span></span></a></li>
+                        <li><a href="" target="_blank" class="btn-team btn-be"><span></span></a></li>
+                        <li><a href="" target="_blank" class="btn-team btn-web"><span></span></a></li>
+                    </ul>
                 </div>
                 <div class="box-team-item">
                     <img class="avatar" src="img/photo2.png" alt="">
                     <p class="position">ceo</p>
                     <p class="name">Alberto Del Rio</p>
-                    <button type="button" class="btn-more"></button>
+                    <button type="button" class="btn-team btn-more btn-al"><span></span></button>
+                    <ul class="social-team social-al" style="display:none">
+                        <li><a href="" target="_blank" class="btn-team btn-fb"><span></span></a></li>
+                        <li><a href="" target="_blank" class="btn-team btn-tw"><span></span></a></li>
+                        <li><a href="" target="_blank" class="btn-team btn-be"><span></span></a></li>
+                        <li><a href="" target="_blank" class="btn-team btn-web"><span></span></a></li>
+                    </ul>
                 </div>
                 <div class="box-team-item">
                     <img class="avatar" src="img/photo3.png" alt="">
                     <p class="position">disigner</p>
                     <p class="name">Thomas Alva Adison</p>
-                    <button type="button" class="btn-more"></button>
+                    <button type="button" class="btn-team btn-more btn-thom"><span></span></button>
+                    <ul class="social-team social-thom" style="display:none">
+                        <li><a href="" target="_blank" class="btn-team btn-fb"><span></span></a></li>
+                        <li><a href="" target="_blank" class="btn-team btn-tw"><span></span></a></li>
+                        <li><a href="" target="_blank" class="btn-team btn-be"><span></span></a></li>
+                        <li><a href="" target="_blank" class="btn-team btn-web"><span></span></a></li>
+                    </ul>
                 </div>
             </div>
         </div>
@@ -333,5 +353,21 @@
         </div>
     </div>
     <script src="https://code.jquery.com/jquery-3.3.1.min.js" integrity="sha256-FgpCb/KJQlLNfOu91ta32o/NMZxltwRo8QtmkMRdAu8=" crossorigin="anonymous"></script>
+    <script>
+        $(document).ready(function(){
+            $(".btn-ric").click(function(){
+                $(".btn-ric").hide();
+                $(".social-ric").fadeIn();
+            });
+            $(".btn-al").click(function(){
+                $(".btn-al").hide();
+                $(".social-al").fadeIn();
+            });
+            $(".btn-thom").click(function(){
+                $(".btn-thom").hide();
+                $(".social-thom").fadeIn();
+            });
+        });
+    </script>
 </body>
 </html>
